--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@ body {
 }
 
 #container {
-    background-color: rgb(130, 122, 122);
     display: flex;
     justify-content: center;
     height: 700px;
@@ -64,6 +63,16 @@ body {
     flex-direction: column;
     position: relative;
     padding-left: 24px;
+}
+
+.bg1 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('../lib/mourad-saadi-785784-unsplash.jpg');
+    background-position: center bottom;
+    background-size: cover;
+    transform-origin: center bottom;
 }
 
 .hamContain {
