--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ body {
     min-height: 100%;
     flex-direction: column;
     position: relative;
-    padding-left: 24px;
+    padding-left: 16px;
 }
 
 .bg1 {
@@ -73,28 +73,30 @@ body {
     background-position: center bottom;
     background-size: cover;
     transform-origin: center bottom;
+    background-color: black;
 }
 
-.hamContain {
+/* .hamContain {
     display: flex;
     flex-direction: column;
-}
+} */
 
 .hammy {
-    position: relative;
-    height: 50px;
+    position: absolute;
+    top: 32px;
     z-index: 5;
 }
 
 .title {
     position: absolute;
-    top: 64px;
+    top: 32px;
+    right:16px;
 }
 
 h1 {
     font-family: 'Iceberg', cursive;
     letter-spacing: -0.05em;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .topLine {
@@ -115,6 +117,8 @@ h1 {
 .menuItem {
     padding-top: 64px;
     opacity: 0;
+    position: absolute;
+    top: 72px;
 }
 
 .menuItem p{
