--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,22 @@ body {
 
 .bg1 {
     position: absolute;
+    background-image: url('../lib/mourad-saadi-785784-unsplash.jpg');
+    background-position: center bottom;
+    background-size: cover;
+    transform-origin: center bottom;
+    background-color: black;
+    top: 16px;
+    right: 16px;
+    bottom: 16px;
+    left: 16px;
+}
+
+.bg2 {
+    position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('../lib/mourad-saadi-785784-unsplash.jpg');
+    background-image: url('../lib/josiah-weiss-541633-unsplash.jpg');
     background-position: center bottom;
     background-size: cover;
     transform-origin: center bottom;
@@ -84,13 +97,14 @@ body {
 .hammy {
     position: absolute;
     top: 32px;
+    left: 32px;
     z-index: 5;
 }
 
 .title {
     position: absolute;
     top: 32px;
-    right:16px;
+    right:32px;
 }
 
 h1 {
@@ -128,4 +142,5 @@ h1 {
     font-size: 1.5em;
     letter-spacing: 0em;
     line-height: 1.4em;
+    padding-left: 16px;
 }
