--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,20 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* ---------- Media Queries ---------- */
+
+@media only screen and (min-width: 1400px) {
+
+    h1 {
+        color: white;
+    }
+
+    .title .fas fa-igloo {
+        color: white;
+    }
+
+}
+
 
 /* ---------- Custom styles ---------- */
 
@@ -65,6 +79,15 @@ body {
     padding-left: 16px;
 }
 
+.bg1::before {
+    content: '';
+    display: block;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+}
+
 .bg1 {
     position: absolute;
     background-image: url('../images/mourad-saadi-785784-unsplash.jpg');
@@ -78,14 +101,16 @@ body {
     left: 16px;
 }
 
+
+
 .bg2 {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 200%;
+    height: 200%;
     background-image: url('../images/josiah-weiss-541633-unsplash.jpg');
-    background-position: center bottom;
-    background-size: cover;
-    transform-origin: center bottom;
+    background-position: right bottom;
+    background-size: auto;
+    transform-origin: right;
     background-color: black;
 }
 
